[package]
name = "pim447_trackball"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.12"}
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread","time"] }
flume = "0.10"