[package]
name = "pim447_trackball"
version = "0.1.0"
edition = "2018"
repository = "https://gitlab.com/ftmazzone/pim447-trackball.git"
include = [
    "/src",
    "/Cargo.*",
    "/LICENSE*",
    "/*.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0"}

[dev-dependencies]
futures = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread","time"] }
flume = "0"
simple-signal = "1"
env_logger = "0"
log = "0"